--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• नए इमोजी जल्द ही आ रहे हैं, और यह अपडेट प्रारंभिक सपोर्ट जोड़ता है ताकि भविष्य आते ही Signal दृश्य संचार के भविष्य के लिए तैयार हो जाए। लोग हमसे पूछते रहते हैं कि हमारा पसंदीदा नया इमोजी कौन सा है, लेकिन उस प्रश्न का उत्तर देना एक "नींबू<sub></sub>" है जिसे हम पार नहीं करेंगे।
+• नए इमोजी जल्द ही आ रहे हैं, और यह अपडेट प्रारंभिक सपोर्ट जोड़ता है ताकि Signal इनके उपलब्ध होते ही इन्हें भेजने और प्राप्त करने के लिए तैयार हो जाए।
